Mon Jul  8 22:41:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Arguments for work memory added.
	  (bary_mul_balance): Ditto.
	  (bary_mul_karatsuba): Ditto.

Mon Jul  8 22:03:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_sq_fast): New function for testing.
	  (rb_big_mul_toom3): Ditto.

	* internal.h (rb_big_sq_fast): Declared.
	  (rb_big_mul_toom3): Ditto.

Mon Jul  8 21:59:34 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance): Initialize a local variable to suppress
	  a warning.

Mon Jul  8 20:55:22 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_balance): Reduce work memory.

Mon Jul  8 08:26:15 2013  Martin Bosslet  <Martin.Bosslet@gmail.com>

	* test/openssl/test_pkey_ec.rb: Skip tests for "Oakley" curves as
	  they are not suitable for ECDSA.
	  [ruby-core:54881] [Bug #8384]

Mon Jul  8 08:03:01 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul): Add a RB_GC_GUARD.

Sun Jul  7 23:56:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_karatsuba): Unreachable code removed.  Remove
	  several branches.

Sun Jul  7 22:59:06 2013  Tanaka Akira  <akr@fsij.org>

	* internal.h (rb_big_mul_normal): Declared.
	  (rb_big_mul_balance): Ditto.
	  (rb_big_mul_karatsuba): Ditto.

	* bignum.c (rb_big_mul_normal): New function for tests.
	  (rb_big_mul_balance): Ditto.
	  (rb_big_mul_karatsuba): Ditto.

Sun Jul  7 19:21:30 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Reorder functions to decrease forward reference.

Sun Jul  7 14:41:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: (bigsub_core): Use bary_sub.
	  (bary_sub): Returns a borrow flag.  Use bary_subb.
	  (bary_subb): New function for actually calculating subtraction with
	  borrow.
	  (bary_sub_one): New function.
	  (bigadd_core): Use bary_add.
	  (bary_add): Returns a carry flag.  Use bary_addc.
	  (bary_addc): New function for actually calculating addition with
	  carry.
	  (bary_add_one): New function.